--- a/AUTHORS
+++ b/AUTHORS
@@ -1,11 +1,10 @@
 # AUTHORS
 
-This project was developed by the:
+This project was developed by the Development Team:
 
-- Sara Alhaweel - Product Owner
-- Developers:
-- Aroub Alsalhi
-- Sara Alhaweel
-- Layan Alnowaiser
-- Rahaf Alshatiri
-- Layan Alhaider
+- Sara Alhaweel - Product Owner / Developer
+- Aroub Alsalhi - Developer
+- Sara Alhaweel - Developer
+- Layan Alnowaiser - Developer
+- Rahaf Alshatiri - Developer
+- Layan Alhaider - Developer
